# web-scraper2

./: Pipfile  README.md  file.html  pyproject.toml
tests/: test_web_scraper2.py
web_scraper/: web_scraper.py
web_scraper2/: web-scraper.py
