[tool.poetry]
name = "web-scraper2"
version = "0.1.0"
description = ""
authors = ["RoaaMustafa <labushanab14@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
sklearn = "^0.0"
pandas = "^1.3.2"
requests = "^2.26.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
